Update minimum requirements to Java 11